# code_collector

./: .gitignore  Makefile  README.md  pyproject.toml  run.py
codebase_collector/: __init__.py  __main__.py  app.py  app_tk.py  collect_codebase.py
src/app/codebase_collector/: __init__.py  code_parser.py  collector.py  module_discovery.py  output_formatter.py  project_manager.py  updater.py
src/app/ui/: extension_dialog.py  file_selector.py  main_window.py  settings_window.py  test_tkinter.py
src/app/utils/: __init__.py  paths.py
