[tool.poetry]
name = "codebase-collector"
version = "0.1.0"
description = "GUI-утилита для сборки кодовой базы в один файл (Tkinter + PyInstaller)"
authors = ["You <you@example.com>"]
readme = "README.md"
packages = [{ include = "codebase_collector" }]

[tool.poetry.dependencies]
python = ">=3.9,<4.0"
pathspec = "^0.12.1"

[tool.poetry.group.dev.dependencies]
# Ограничиваем сам PyInstaller по версиям Python, чтобы не ругался резолвер
pyinstaller = { version = "^6.11.0", python = ">=3.8,<3.14" }

[tool.poetry.scripts]
codebase-collector = "codebase_collector.app:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
